--- a/exercise2.html
+++ b/exercise2.html
@@ -12,14 +12,20 @@
 
     .red {
       background-color: red;
+      position: relative;
+      left: 200px; top: 200px;
     }
 
     .blue {
       background-color: blue;
+      position: relative;
+      left: 100px;
     }
 
     .yellow {
       background-color: yellow;
+      position: relative;
+      bottom: 200px;
     }
   </style>
 </head>
