--- a/exercise3.html
+++ b/exercise3.html
@@ -4,10 +4,16 @@
   <head>
     <meta charset="utf-8">
     <title>Philippe</title>
-    <link rel="stylesheet" href="css/exercise3.css">
+    <link rel="stylesheet" type="text/css" href="css/exercise3.css">
+    <link rel="icon" href="images/philippe.ico">
   </head>
 
   <body>
+
+    <h1>I'm Philippe</h1>
+    <p>
+       A systems developer.
+      </p>
 
   </body>
 
