--- a/exercise3.html
+++ b/exercise3.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-  <head>
-    <meta charset="utf-8">
-    <title>Philippe</title>
-    <link rel="stylesheet" type="text/css" href="css/exercise3.css">
-    <link rel="icon" href="images/philippe.ico">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>Philippe</title>
+  <link rel="stylesheet" type="text/css" href="css/exercise3.css">
+  <link rel="icon" href="images/philippe.ico">
+</head>
 
-  <body>
+<body>
 
+  <div class="greeting">
+    <img src="idea.png" alt="idea image" />
     <h1>I'm Philippe</h1>
-    <p>
-       A systems developer.
-      </p>
-
-  </body>
+    <p>A systems developer.</p>
+    <img src="idea.png" alt="idea image">
+    <img src="programming.png" alt="programming image" />
+  </div>
+  <div class="middle"></div>
+  <div class="bottom"></div>
+</body>
 
 </html>
