--- a/exercise3.html
+++ b/exercise3.html
@@ -6,15 +6,16 @@
   <title>Philippe</title>
   <link rel="stylesheet" type="text/css" href="css/exercise3.css">
   <link rel="icon" href="images/philippe.ico">
+  <link href="https://fonts.googleapis.com/css?family=ZCOOL+QingKe+HuangYou" rel="stylesheet">
 </head>
 
 <body>
 
   <div class="greeting">
-    <img src="idea.png" alt="idea image" />
-    <h1>I'm Philippe</h1>
+    <img class="top-bulb" src="idea.png" alt="idea image" />
+    <h1>I'm Philippe.</h1>
     <p>A systems developer.</p>
-    <img src="idea.png" alt="idea image">
+    <img class="bottom-bulb" src="idea.png" alt="idea image">
     <img src="programming.png" alt="programming image" />
   </div>
   <div class="middle"></div>
